[gd_scene load_steps=8 format=3 uid="uid://dpcmpwxkcu8gl"]

[ext_resource type="Script" path="res://objects/kolce.gd" id="1_o8j2a"]
[ext_resource type="Texture2D" uid="uid://dytbamsxhbj3c" path="res://Grafiki/Obiekty/Kolce1.png" id="2_xbswp"]

[sub_resource type="Curve2D" id="Curve2D_olbrk"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 4, 0, 0, 0, 0, 0, -16)
}
point_count = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6rgwe"]
height = 22.0

[sub_resource type="Animation" id="Animation_0x4m8"]
resource_name = "Extend"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_0g3ax"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cgs1o"]
_data = {
"Extend": SubResource("Animation_0x4m8"),
"RESET": SubResource("Animation_0g3ax")
}

[node name="Kolce" type="Path2D"]
position = Vector2(0, -4)
curve = SubResource("Curve2D_olbrk")
script = ExtResource("1_o8j2a")

[node name="AnimatableBody" type="AnimatableBody2D" parent="."]
position = Vector2(0, 4)
collision_layer = 0
collision_mask = 0

[node name="Area2D" type="Area2D" parent="AnimatableBody"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody/Area2D"]
position = Vector2(0, 15)
shape = SubResource("CapsuleShape2D_6rgwe")

[node name="Sprite2D" type="Sprite2D" parent="AnimatableBody/Area2D"]
position = Vector2(0, 8)
texture = ExtResource("2_xbswp")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2(0, 4)
rotation = -1.5708
rotates = false
loop = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PathFollow2D"]
remote_path = NodePath("../../AnimatableBody")
update_rotation = false
update_scale = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cgs1o")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="AnimatableBody/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
